kubernetes_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rmdp-ai-nia-customer-segmentation
  name: rmdp-ai-nia-customer-segmentation
  namespace: kubeflow
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: 80
  selector:
    app: rmdp-ai-nia-customer-segmentation
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rmdp-ai-nia-customer-segmentation
  name: rmdp-ai-nia-customer-segmentation
  namespace: kubeflow
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rmdp-ai-nia-customer-segmentation
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rmdp-ai-nia-customer-segmentation
    spec:
      containers:
      - command:
        - sh
        - -c
        - |
          update-ca-certificates;
          cat /etc/ssl/certs/minio.pem >> /usr/local/lib/python3.9/site-packages/certifi/cacert.pem;
          update-ca-certificates;
          cat /etc/ssl/certs/ingress-ca.pem >> /usr/local/lib/python3.9/site-packages/certifi/cacert.pem;
          update-ca-certificates;
          uvicorn app.main:app --host '::' --port "80"
        image: kldev-docker.slb-wartifactory-v.stg.rmn.local/rakuten/data-lake/ai-platform/jenkinsbuild/sym-mlops-backend:v0.0.119
        imagePullPolicy: IfNotPresent
        name: ai-nia-customer-segmentation
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: rmdp-ai-nia-customer-segmentation
  name: rmdp-ai-nia-customer-segmentation
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /nia-customer-segmentation/
    rewrite:
      uri: /
    route:
    - destination:
        host: rmdp-ai-nia-customer-segmentation.kubeflow.svc.cluster.local
        port:
          number: 8888
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    app: rmdp-ai-nia-customer-segmentation
  name: rmdp-ai-nia-customer-segmentation
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - {}
  selector:
    matchLabels:
      app: rmdp-ai-nia-customer-segmentation
